School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_declarations/decl_sameVar_float.deca
//déclarer deux fois une même variable
//erreur attendue : Error, type already declared in Declvar

{
    float x = 12.5;
    float x = 6.5;
}